# VneuroTK

./: .gitignore  README.md  justfile  pyproject.toml  zensical.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: api.md  changelog.md  contribute.md  index.md  installation.md  security.md  usage.md
docs/api/: core.md  datasets.md  io.md  neuro.md  vision.md  viz.md
docs/example/: nod-neurovision.md
docs/example_ipynb/: data.ipynb  neurovision.ipynb  path.ipynb  vision.ipynb
docs/stylesheets/: extra.css
docs/usage/: data.md  path.md  vision_alone.md  vision_models.md  vision_union.md
scripts/: release.py
src/vneurotk/: __init__.py  _log.py  cli.py
src/vneurotk/core/: __init__.py  info.py  recording.py  stimulus.py
src/vneurotk/datasets/: __init__.py  sample.py
src/vneurotk/io/: __init__.py  _image_codec.py  h5_persistence.py  loader.py  path.py
src/vneurotk/neuro/: __init__.py  base.py  trial.py
src/vneurotk/utils/: __init__.py  mne_utils.py  time.py
src/vneurotk/vision/: __init__.py  _cache.py  data.py  image_source.py  meta.py
src/vneurotk/vision/model/: __init__.py  base.py  selector.py
src/vneurotk/vision/model/backend/: __init__.py  base.py  thingsvision_backend.py  timm_backend.py  transformers_backend.py
src/vneurotk/vision/representation/: __init__.py  visual_representations.py
src/vneurotk/viz/: __init__.py  data.py  utils.py
tests/: conftest.py  test_io_and_data.py  test_vision.py
